[package]
name = "gsc-crypt"
version = "3.1.13"
authors = ["Magic Len <len@gsclen.org>"]
edition = "2021"
rust-version = "1.61"
repository = "https://github.com/putao520/rust-gsccrypt"
homepage = "https://gsclen.org/aes"
keywords = ["crypto", "cryptojs", "aes", "des", "encrypt"]
categories = ["no-std" ,"algorithms", "cryptography"]
description = "GscCrypt is a Rust library to encrypt/decrpyt strings, files, or data, using Data Encryption Standard(DES) or Advanced Encryption Standard(AES) algorithms. It supports CBC block cipher mode, PKCS5 padding and 64, 128, 192 or 256-bits key length. It's Compatible with the default AES parameter mode in CryptoJS"
license = "Apache-2.0"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
base64 = "0.22.0"
digest = "0.9"
block-modes = "0.8"
des = "0.7"
aes = "0.7.5"
crc-any = "2.3"
md-5 = "0.10.6"
tiger = "0.1"
sha2 = "0.9"
rand = "0.9.0-alpha.1"

[features]
default = ["std"]
std = []
